@@ -1,0 +1,15 @@
+// Copyright (c) 2024 Yuki Kimoto
+// MIT License
+
+#include "spvm_native.h"
+
+
+
+static const char* FILE_NAME = "Net/SSLeay/OPENSSL_INIT_SETTINGS.c";
+
+int32_t SPVM__Net__SSLeay__OPENSSL_INIT_SETTINGS__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  return 0;
+}
+
+
