@@ -1,0 +1,6 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::OPENSSL_INIT_SETTINGS {
+  
+}
