@@ -29,6 +29,7 @@
       OPENSSL_INIT_ENGINE_ALL_BUILTIN
       OPENSSL_INIT_ATFORK
       OPENSSL_INIT_NO_ATEXIT
+    * Add Net::SSLeay::OPENSSL_INIT_SETTINGS class.
   [Incompatible Changes]
     * Remove the logic of OpenSSL initializetion because this is automatically executed after OpenSSL 1.1.0.
 0.015 2024-11-20
